--- a/teste00-main/Restaurante/Cardapio/page.html
+++ b/teste00-main/Restaurante/Cardapio/page.html
@@ -28,7 +28,7 @@
     <h2>Pratos</h2>
     <div class="wrap-card">
         <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../assets/prato01.avif" class="card-img-top" alt="prato 01">
+            <img width="300px" height="200px" src="../assets/360_F_457738290_y8fywtzTyfT2pQzU5mL1OpKHHAERc6kS.jpg" class="card-img-top" alt="prato 01">
             <div class="card-body">
               <h5 class="card-title">Prato feito</h5>
               <p class="card-text">R$ 12,90</p>
@@ -42,9 +42,9 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../assets/comida-vegana-8-1.jpg" class="card-img-top" alt="Prato 03">
+            <img width="300px" height="200px" src="../assets/macarrao-alho-e-oleo.jpg" class="card-img-top" alt="Prato 03">
             <div class="card-body">
-              <h5 class="card-title">Prato Vegano</h5>
+              <h5 class="card-title">Macarrão alho e óleo</h5>
               <p class="card-text">R$ 22,50</p>
             </div>
           </div>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../assets/drink-com-laranja.webp" class="card-img-top" alt="...">
+            <img width="300px" height="200px" src="../assets/suco de laranja.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Suco de laranja</h5>
               <p class="card-text">R$12,00</p>
